dodanie wykrzyknikow linijka 47

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ And as we wind on down the road<br>
 Our shadows taller than our soul<br>
 There walks a lady we all know<br>
 Who shines white light and wants to show<br>
-How everything still turns to gold<br>
+How everything still turns to gold!!!!!<br>
 And if you listen very hard<br>
 The tune will come to you at last<br>
 When all is one and one is all, that's what it is<br>
